2005-07-17  Johan Dahlin  <johan@gnome.org>

	* gobject/pygobject.c: (pygobject_new_full), (pygobject_dealloc),
	(pygobject_clear):
	* gtk/gdk.override:
	* gtk/gtk-types.c: (_pygtk_style_helper_new),
	(pygtk_style_helper_dealloc), (pygtk_style_helper_setitem),
	(pygtk_tree_model_row_dealloc),
	(pygtk_tree_model_row_iter_dealloc):
	* gtk/gtk.override:
	* gtk/gtkwidget.override:
	We have atomic ref counting in glib now, remove block/unblocking
	around reference counting.	

	* gobject/pygobject.h: 
	* gobject/gobjectmodule.c (pyg_gil_state_ensure_py23) 
	(pyg_gil_state_release_py23): Remove pre python 2.3.5 compatibility.
	Simplifies thread handling.
	
	* configure.in: Require glib/gtk+ 2.7.3

	* gtk/gtk.defs (get_model, set_do_overwrite_confirmation) 
	(get_do_overwrite_confirmation, queue_resize, get_visible_range): Add

	* gtk/gtk-types.defs (FileChooserError): Add.

2005-07-15  Johan Dahlin  <jdahlin@async.com.br>

	* gobject/gobjectmodule.c: (create_property):
	Allow enums to be specified in the constructor
	* gobject/pygparamspec.c: (pyg_param_spec_getattr):
	Return flags or enum object for pspec.default_value
	* tests/test_enum.py: Remove usage of assert statement,
	add default_value test, both for flags and enum

2005-07-10  Johan Dahlin  <johan@gnome.org>

	* configure.in: Post release version bump

=== PyGTK 2.7.0 ===
2005-07-10  Johan Dahlin  <johan@gnome.org>

	* configure.in: Bump glib/gtk+ requirements

	* NEWS: Updated

	* README: Updated

2005-07-10  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* gobject/pygiochannel.c (py_io_channel_win32_poll)
	(py_io_channel_win32_make_pollfd): Change to use the new PyGPollFD
	type instead of tuples.

	* gobject/pygsource.c (pyg_poll_fd_dealloc): Change DECREF to
	XDECREF on self->fd_obj.  Moved PyGPollFD structure into
	pygobject-private.h, to make it accessible from pygiochannel.c.

2005-07-10  Johan Dahlin  <johan@gnome.org>

	* gtk/gtkwidget.override (_wrap_gtk_widget_set_set_scroll_adjustments_signal) 