@@ -1,3 +1,10 @@
+2005-07-22  Gustavo J. A. M. Carneiro  <gjc@gnome.org>
+
+	* gobject/pygobject.c (pygobjectmeta_register): Don't
+	automatically register gtype if neither one of __gtype_name__,
+	__properties__, or __gsignals__ is defined in the class
+	dictionary.  Fixes #311226.
+
 2005-07-17  Johan Dahlin  <johan@gnome.org>
 
 	* gobject/pygobject.c: (pygobject_new_full), (pygobject_dealloc),
